--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-
     /* more on this crazy alphanumerical value in a minute! */
     
     color: #39a6b2;
@@ -14,9 +13,7 @@ body {
 }
 
 /* apply styles to <header> */
-
 header {
-
     padding: 20px 35px;
 background-color: #39a6b2
 }
@@ -88,6 +85,7 @@ section {
     background-position: center;
     position: relative;
 }
+/* HERO STYLES END */
 
 .hero-form {
     border: 3px solid #024e76;    
@@ -105,7 +103,7 @@ section {
     margin: 0;
 }
 
-.hero form p {
+.hero-form p {
     margin: 5px 0 15px 0;
 }
 
@@ -130,7 +128,6 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
-/* HERO STYLES END */
 
 .intro {
     text-align: center;
@@ -147,23 +144,6 @@ section {
 .steps {
     text-align: center;
     background: #fce138;
-}
-
-.section-title {
-    font-size: 55px;
-    color:#024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-}
-
-.primary-border {
-    border-color: #fce138;
-}
-
-.secondary-border {
-    border-color: #39a6b2;
 }
 
 .steps div {
@@ -188,4 +168,67 @@ section {
 
 .steps span {
     font-size: 38px;
+}
+
+.section-title {
+    font-size: 55px;
+    color:#024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+}
+
+.primary border {
+    border-color:#fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin:0 auto 30px auto;
+    background:#024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+}
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
 }
