--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,10 +27,6 @@ header h1 {
 }
 
 header a {
-    color: #fce138;
-}
-
-header a {
     text-decoration: none;
     color: #fce138;
 }
@@ -180,7 +176,7 @@ section {
 }
 
 .primary border {
-    border-color:#fce138;
+    border-color: #fce138;
 }
 
 .secondary-border {
@@ -231,4 +227,24 @@ section {
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
+}
+.contact {
+    text-align: center;
+    background: #024e76
+}
+.contact h2{
+    color: #fce138
+}
+.contact-info iframe {
+    width: 400px;
+    height:400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
 }
