--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,18 +199,11 @@ section {
     width: 35%;
     float: left;
 }
+
 .trainer-bio {
     padding: 35px;
     float: left;
     width: 65%;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
 }
 
 .trainer-bio h3 {
@@ -228,16 +221,27 @@ section {
     font-size: 17px;
     line-height: 1.3;
 }
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
 .contact {
     text-align: center;
-    background: #024e76
+    background: #024e76;
 }
+
 .contact h2{
     color: #fce138
 }
+
 .contact-info iframe {
     width: 400px;
-    height:400px;
+    height: 400px;
 }
 
 .contact-info div {
@@ -254,7 +258,8 @@ section {
     font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p, 
+.contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
@@ -264,3 +269,15 @@ section {
 .contact-info a {
     color: #fce138;
 }
+.hero {
+    margin: 20px;
+    font-size: 20px;
+    background-color: white;
+    color: blue;
+  }
+  
+  /* these two colors will override the ones above in .hero */
+  .hero-secondary {
+    background-color: black;
+    color: red;
+  }
