add content to hero, replace image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ section {
     margin: 20px;
     font-size: 20px;
     background-color: white;
-    color: blue;
+    color: #39a6b2;
   }
   
   /* these two colors will override the ones above in .hero */
